ping-pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: local-pv-claim
      containers:
        - name: ping-pong
          image: arkb2023/ping-pong:1.11.2
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
