ping-pong/manifests/ping-pong-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ping-pong-route
  namespace: exercises  
spec:
  parentRefs:
  - name: log-ping-app-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    - path:
        type: PathPrefix
        value: /pings
    backendRefs:
    - name: ping-pong-svc
      port: 3456
